# binance-fibonaccibot

./: .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml  sampledotenv
container-analyzer/: Cargo.toml  Dockerfile
container-analyzer/postgres-access/: Cargo.toml
container-analyzer/postgres-access/src/: lib.rs
container-crawler/: Dockerfile
container-predictor/: Cargo.toml
container-predictor/binance-access/: Cargo.toml
container-predictor/binance-access/src/: lib.rs
container-predictor/binance/src/: main.rs
container-predictor/postgres-access/: Cargo.toml
container-predictor/postgres-access/src/: lib.rs
container-predictor/postgres/src/: main.rs
container-predictor/predictor/: Cargo.toml
container-predictor/predictor/src/: main.rs
container-predictor/redis-access/: Cargo.toml
container-predictor/redis-access/src/: lib.rs
container-predictor/src/: binance_access.rs  main.rs  postgres_access.rs  postgresdbAccess.py  predictionAccess.py  predictor.py  redis_access.rs  requirements.txt  rust-xp-02-postgresql-sqlx.rs
container-telegram/: Dockerfile
container-test/: Cargo.toml
container-validator/: Dockerfile
container-webui/: Dockerfile  authorized_keys  crawler.py  gainsCalculator.py  gainsPrinter.php  make.Dockerfile  requirements.txt
predictor-old/: Dockerfile
tests/: backtesting.ipynb  redisTest.py  telegramTest.py
tools/: adall.sh  ansibleFirewall.yml  backtesting.ipynb  backtesting.py  backtesting2.py  backtesting3.py  dataGrab.ipynb  debugging.R  development.ipynb  fibLvl.json  fibLvlValidator.R  getit.py  test.py  (+10 more)
(+86 files in other folders)
