[package]
name = "container-predictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "*"
dotenv = "*"
dotenv_codegen = "*"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }

[workspace]
members = ["biannce", "redis", "postgres", "predictor"]